--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "package-all": "npx projen package-all",
     "package:js": "npx projen package:js",
     "post-compile": "npx projen post-compile",
+    "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
     "release": "npx projen release",
     "test": "npx projen test",
     "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
+    "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
     "projen": "npx projen"
   },
@@ -49,6 +51,7 @@
     "jsii-docgen": "^7.0.205",
     "jsii-pacmak": "^1.73.0",
     "json-schema": "^0.4.0",
+    "npm-check-updates": "^16",
     "projen": "^0.66.16",
     "standard-version": "^9",
     "ts-jest": "^27",
