chore: upgrade deps

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "cdktf": "0.14.0",
-    "constructs": "^10.1.221",
+    "constructs": "10.0.12",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.7",
     "eslint-import-resolver-typescript": "^3.5.3",
