--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -247,19 +247,19 @@
           "exec": "npm update npm-check-updates"
         },
         {
-          "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='cdktf'"
+          "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='cdktf,@cdktf/provider-null'"
         },
         {
-          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='cdktf'"
+          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='cdktf,@cdktf/provider-null'"
         },
         {
-          "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='cdktf'"
+          "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='cdktf,@cdktf/provider-null'"
         },
         {
-          "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='cdktf'"
+          "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='cdktf,@cdktf/provider-null'"
         },
         {
-          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='cdktf'"
+          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='cdktf,@cdktf/provider-null'"
         },
         {
           "exec": "npm install"
