--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
+    "@cdktf/provider-aws": "^11.0.10",
     "cdktf": "^0.14.0",
     "constructs": "^10.0.12"
   },
