--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jsii-diff": "^1.74.0",
     "jsii-docgen": "^7.0.220",
     "jsii-pacmak": "^1.74.0",
+    "json-schema": "^0.4.0",
     "npm-check-updates": "^16",
     "projen": "^0.67.28",
     "standard-version": "^9",
